[gd_scene load_steps=2 format=3 uid="uid://cswysjv240iry"]

[ext_resource type="Script" uid="uid://bw55jgvv8pqry" path="res://scripts/popups/move_popup.gd" id="1_kldpr"]

[node name="MovePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kldpr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 58.0
offset_bottom = 101.0

[node name="MoveButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Move"

[node name="AttackButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Attack"

[node name="WaitButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Wait"

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="VBoxContainer/WaitButton" to="." method="_on_wait_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
